angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: angular
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/doan-default: "true"
        io.kompose.service: angular
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: warehouse-client
          name: angular
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
