kong-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/doan-default: "true"
    io.kompose.service: kong
  name: kong
spec:
  containers:
    - env:
        - name: KONG_ADMIN_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_ADMIN_ERROR_LOG
          value: /dev/stderr
        - name: KONG_ADMIN_LISTEN
          value: 0.0.0.0:8001, 0.0.0.0:8444 ssl
        - name: KONG_CASSANDRA_CONTACT_POINTS
          value: kong-database
        - name: KONG_DATABASE
          value: "off"
        - name: KONG_DECLARATIVE_CONFIG
          value: /usr/local/kong/declarative/kong.yml
        - name: KONG_LOG_LEVEL
          value: warn
        - name: KONG_PG_HOST
          value: kong-database
        - name: KONG_PG_PASSWORD
          value: kong
        - name: KONG_PG_USER
          value: kong
        - name: KONG_PROXY_ACCESS_LOG
          value: /dev/stdout
        - name: KONG_PROXY_ERROR_LOG
          value: /dev/stderr
      image: kong:latest
      name: kongapigateway
      resources: {}
      volumeMounts:
        - mountPath: /usr/local/kong/logs
          name: kong-claim0
        - mountPath: /usr/local/kong/logs/log.txt
          name: kong-claim1
        - mountPath: /usr/local/kong/declarative
          name: kong-claim2
        - mountPath: /usr/local/kong/nginx.conf
          name: kong-claim3
        - mountPath: /usr/local/kong/nginx-kong.conf
          name: kong-claim4
  restartPolicy: OnFailure
  volumes:
    - name: kong-claim0
      persistentVolumeClaim:
        claimName: kong-claim0
    - name: kong-claim1
      persistentVolumeClaim:
        claimName: kong-claim1
    - name: kong-claim2
      persistentVolumeClaim:
        claimName: kong-claim2
    - name: kong-claim3
      persistentVolumeClaim:
        claimName: kong-claim3
    - name: kong-claim4
      persistentVolumeClaim:
        claimName: kong-claim4
status: {}
