angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 80
  selector:
    io.kompose.service: angular
status:
  loadBalancer: {}
