master-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: master-api
  name: master-api
spec:
  ports:
    - name: "50001"
      port: 50001
      targetPort: 50001
    - name: "50000"
      port: 50000
      targetPort: 50000
  selector:
    io.kompose.service: master-api
status:
  loadBalancer: {}
