warehouse-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -v convert -f docker-compose.yml -o exportk8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: warehouse-api
  name: warehouse-api
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    io.kompose.service: warehouse-api
status:
  loadBalancer: {}
